--- a/.gradient/workflows/stylegan2.yaml
+++ b/.gradient/workflows/stylegan2.yaml
@@ -35,6 +35,7 @@ jobs:
         pip install Pillow==6.2.1
         cd /inputs/stylegan2
         pip install colab_ssh
+        pip install colab_ssh --upgrade
         python run_generator.py generate-images \
           --network=gdrive:networks/stylegan2-ffhq-config-f.pkl \
           --seeds=6600-6605 \
