--- a/.gradient/workflows/stylegan2.yaml
+++ b/.gradient/workflows/stylegan2.yaml
@@ -34,10 +34,7 @@ jobs:
         pip install requests==2.22.0
         pip install Pillow==6.2.1
         cd /inputs/stylegan2
-        pip install colab_ssh
-        pip install colab_ssh --upgrade
-        pip from colab_ssh import launch_ssh
-        pip launch_ssh 1yeTdNMI6I0hhpSIenfZuPGU2yc_75A5EkpnQWVCQw33pfBC8, 123
+        pip install colabcode
         python run_generator.py generate-images \
           --network=gdrive:networks/stylegan2-ffhq-config-f.pkl \
           --seeds=6600-6605 \
