--- a/.gradient/workflows/stylegan2.yaml
+++ b/.gradient/workflows/stylegan2.yaml
@@ -36,6 +36,7 @@ jobs:
         cd /inputs/stylegan2
         pip install colabcode
         from colabcode import ColabCode
+        ColabCode(port=10000)
         python run_generator.py generate-images \
           --network=gdrive:networks/stylegan2-ffhq-config-f.pkl \
           --seeds=6600-6605 \
